@@ -1,8 +1,8 @@
 package org.ikigaidigital.infrastructure.adapter.input.rest;
 
-import org.ikigaidigital.domain.port.input.TimeDepositServicePort;
-import org.ikigaidigital.infrastructure.adapter.input.rest.dto.TimeDepositResponseDTO;
-import org.ikigaidigital.infrastructure.adapter.input.rest.dto.UpdateBalancesResponseDTO;
+import org.ikigaidigital.application.port.input.GetAllTimeDepositsUseCase;
+import org.ikigaidigital.application.port.input.UpdateAllBalancesUseCase;
+import org.ikigaidigital.domain.model.TimeDeposit;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -11,8 +11,6 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.math.BigDecimal;
-import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.List;
 
@@ -30,16 +28,17 @@ class TimeDepositControllerIntegrationTest {
     private MockMvc mockMvc;
 
     @MockBean
-    private TimeDepositServicePort timeDepositService;
+    private GetAllTimeDepositsUseCase getAllTimeDepositsUseCase;
+
+    @MockBean
+    private UpdateAllBalancesUseCase updateAllBalancesUseCase;
 
     @Test
     @DisplayName("GET /api/v1/time-deposits returns list of deposits")
     void getAllTimeDeposits_returnsListOfDeposits() throws Exception {
         // Given
-        TimeDepositResponseDTO deposit = new TimeDepositResponseDTO(
-                1, "basic", BigDecimal.valueOf(10000.00), 45, Collections.emptyList()
-        );
-        when(timeDepositService.getAllTimeDeposits()).thenReturn(List.of(deposit));
+        TimeDeposit deposit = new TimeDeposit(1, "basic", 10000.00, 45);
+        when(getAllTimeDepositsUseCase.getAllTimeDeposits()).thenReturn(List.of(deposit));
 
         // When & Then
         mockMvc.perform(get("/api/v1/time-deposits")
@@ -58,7 +57,7 @@ class TimeDepositControllerIntegrationTest {
     @DisplayName("GET /api/v1/time-deposits returns empty list when no deposits")
     void getAllTimeDeposits_returnsEmptyList() throws Exception {
         // Given
-        when(timeDepositService.getAllTimeDeposits()).thenReturn(Collections.emptyList());
+        when(getAllTimeDepositsUseCase.getAllTimeDeposits()).thenReturn(Collections.emptyList());
 
         // When & Then
         mockMvc.perform(get("/api/v1/time-deposits")
@@ -72,11 +71,9 @@ class TimeDepositControllerIntegrationTest {
     @DisplayName("POST /api/v1/time-deposits/update-balances returns update response")
     void updateAllBalances_returnsUpdateResponse() throws Exception {
         // Given
-        LocalDateTime timestamp = LocalDateTime.of(2024, 1, 15, 10, 30, 0);
-        UpdateBalancesResponseDTO response = new UpdateBalancesResponseDTO(
-                "Balances updated successfully", 3, timestamp
-        );
-        when(timeDepositService.updateAllBalances()).thenReturn(response);
+        UpdateAllBalancesUseCase.UpdateBalancesResult result =
+                new UpdateAllBalancesUseCase.UpdateBalancesResult(3);
+        when(updateAllBalancesUseCase.updateAllBalances()).thenReturn(result);
 
         // When & Then
         mockMvc.perform(post("/api/v1/time-deposits/update-balances")
@@ -92,11 +89,9 @@ class TimeDepositControllerIntegrationTest {
     @DisplayName("POST /api/v1/time-deposits/update-balances returns zero count for empty list")
     void updateAllBalances_returnsZeroCountForEmptyList() throws Exception {
         // Given
-        LocalDateTime timestamp = LocalDateTime.now();
-        UpdateBalancesResponseDTO response = new UpdateBalancesResponseDTO(
-                "Balances updated successfully", 0, timestamp
-        );
-        when(timeDepositService.updateAllBalances()).thenReturn(response);
+        UpdateAllBalancesUseCase.UpdateBalancesResult result =
+                new UpdateAllBalancesUseCase.UpdateBalancesResult(0);
+        when(updateAllBalancesUseCase.updateAllBalances()).thenReturn(result);
 
         // When & Then
         mockMvc.perform(post("/api/v1/time-deposits/update-balances")
